# KisakBlackVR

./: CMakeLists.txt  KisakBlack.vcxproj  KisakBlack.vcxproj.filters  cmake_files.cmake
src/DW/: dwLogOn_pc.cpp  dwLogOn_pc.h  dwNet.cpp  dwStorage.cpp  dwStorage.h  dwUtils_pc.cpp  dwUtils_pc.h
src/DynEntity/: DynEntity_client.cpp  DynEntity_client.h  DynEntity_coll.cpp  DynEntity_coll.h  DynEntity_gamestate.h  DynEntity_load_obj.cpp  DynEntity_load_obj.h  DynEntity_pieces.cpp  DynEntity_pieces.h  DynEntity_server.h
src/EffectsCore/: FxCurve.h  FxCurve_load_obj.cpp  FxCurve_load_obj.h  fx_beam.cpp  fx_convert.cpp  fx_convert.h  fx_draw.cpp  fx_draw.h  fx_marks.cpp  fx_marks.h  fx_postlight.cpp  fx_postlight.h  fx_profile.cpp  fx_profile.h  fx_sort.cpp  fx_sort.h  fx_sprite.cpp  fx_sprite.h  fx_system.cpp  fx_system.h  fx_unique_handle.cpp  fx_unique_handle.h  fx_update.cpp  fx_update.h  fx_update_util.cpp  fx_update_util.h  fx_wind.h
src/aim_assist/: aim_assist.cpp  aim_target.cpp  aim_target.h
src/bgame/: bg_animation.cpp  bg_animation.h  bg_animconditions.cpp  bg_animconditions.h  bg_dog.cpp  bg_dog.h  bg_dog_animations_mp.cpp  bg_dog_animations_mp.h  bg_dtp.cpp  bg_dtp.h  bg_emblems.cpp  bg_emblems.h  bg_local.h  bg_mantle.cpp  bg_misc.cpp  bg_misc.h  bg_misctables.cpp  bg_misctables.h  bg_pmove.cpp  bg_pmove.h  bg_public.h  bg_slidemove.cpp  bg_slidemove.h  bg_unlockable_items.cpp  bg_unlockable_items.h  bg_vehicles_mp.cpp  bg_weapons.cpp  bg_weapons.h  bg_weapons_attachment.cpp  bg_weapons_attachment.h  bg_weapons_def.cpp  bg_weapons_def.h  bg_weapons_load_obj.cpp  bg_weapons_view.cpp
src/cgame/: cg_bolt.cpp  cg_bolt.h  cg_camera.cpp  cg_camera.h  cg_compass.cpp  cg_draw_debug.cpp  cg_draw_names.cpp  cg_draw_reticles.cpp  cg_drawtools.cpp  cg_effects_load_obj.cpp  cg_event.cpp  cg_hudelem.cpp  cg_hudelem.h  cg_info.cpp  cg_laser.cpp  cg_mem_track.cpp  cg_perf.cpp  cg_scr_main.cpp  cg_scr_main.h  cg_shellshock.cpp  cg_shellshock.h  cg_spawn.cpp  cg_vehicle.cpp  cg_visionsets.cpp  cg_visionsets.h  cg_weapons.cpp  cg_weapons.h  cg_world.cpp  cg_world.h
src/cgame_mp/: cg_actors_mp.cpp  cg_compassfriendlies_mp.cpp  cg_draw_mp.cpp  cg_draw_mp.h  cg_ents_mp.cpp  cg_ents_mp.h  cg_local_mp.h  cg_main_mp.cpp  cg_main_mp.h  cg_newDraw_mp.cpp  cg_players_mp.cpp  cg_predict_mp.cpp  cg_scoreboard_mp.cpp  cg_scoreboard_mp.h  cg_scr_main_mp.cpp  cg_scr_main_mp.h  cg_servercmds_mp.cpp  cg_servercmds_mp.h  cg_snapshot_mp.cpp  cg_ui_animate_mp.cpp  cg_view_mp.cpp  cg_view_mp.h
src/client/: cl_cin.cpp  cl_compositing.h  cl_debugdata.cpp  cl_devgui.cpp  cl_gamepad.cpp  cl_keys.cpp  cl_main.cpp  cl_medal.cpp  cl_milestone.cpp  splitscreen.cpp
src/client_mp/: cl_cgame_mp.cpp  cl_input_mp.cpp  cl_main_mp.cpp  cl_main_mp.h  cl_main_pc_mp.cpp  cl_main_pc_mp.h  cl_parse_mp.cpp  cl_scrn_mp.cpp  client_mp.h  g_client_mp.cpp  g_client_mp.h  sv_client_mp.cpp
src/clientscript/: cscr_animtree.cpp  cscr_animtree.h  cscr_compiler.cpp  cscr_compiler.h  cscr_debugger.cpp  cscr_debugger.h  cscr_evaluate.cpp  cscr_evaluate.h  cscr_instance.cpp  cscr_instance.h  cscr_main.cpp  cscr_main.h  cscr_memorytree.cpp  cscr_memorytree.h  cscr_parser.cpp  cscr_parser.h  cscr_parsetree.cpp  cscr_parsetree.h  cscr_readwrite.h  cscr_stringlist.cpp  cscr_stringlist.h  cscr_variable.cpp  cscr_variable.h  cscr_vm.cpp  cscr_vm.h  cscr_yacc.cpp  cscr_yacc.h  scr_const.cpp  scr_const.h
src/common/: brush_edges.cpp  brush_edges.h
src/database/: database.h  db_assetnames.cpp  db_assetnames.h  db_auth.cpp  db_auth.h  db_file_load.cpp  db_file_load.h  db_load.cpp  db_load.h  db_registry.cpp  db_registry.h  db_stream.cpp  db_stream.h  db_stream_load.cpp  db_stream_load.h
src/ddl/: ddl_api.cpp  ddl_api.h
src/demo/: demo_common.cpp  demo_common.h  demo_files.cpp  demo_playback.cpp  demo_ui.cpp
src/devgui/: devgui.cpp  devgui_input.cpp
src/flame/: flame_physics.cpp  flame_physics.h  flame_system.cpp  flame_system.h
src/game/: actor.h  actor_aim.cpp  actor_aim.h  actor_animapi.cpp  actor_animapi.h  actor_badplace.cpp  actor_badplace.h  actor_corpse.cpp  actor_corpse.h  actor_death.cpp  actor_death.h  actor_dog_exposed.cpp  actor_dog_exposed.h  actor_event_listeners.cpp  actor_event_listeners.h  actor_events.cpp  actor_events.h  actor_exposed.cpp  actor_exposed.h  actor_fields.cpp  actor_fields.h  actor_generic.cpp  (+78 more)
tl/: gdt_remote.cpp  gdt_remote.h  tl_system.cpp  tl_system.h
(+464 files in other folders)
